avoid scrollbars on body

--- a/web/assets/style.css
+++ b/web/assets/style.css
@@ -15,6 +15,7 @@ html, body {
 
 body {
     background-color: #008080;
+    overflow: hidden;
 }
 
 textarea {
